force-app/main/default/objects/User_Audit_Log_Detail_Field__c/User_Audit_Log_Detail_Field__c.object-meta.xml
<CustomObject>
    <description>One record per field matched on the User Audit Log.</description>
    <label>User Audit Log Detail Field</label>
    <nameField>
        <label>User Audit Log Detail Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Audit Log Detail Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>