force-app/main/default/objects/User_Audit_Log_Detail_Field__c/fields/Detail_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Detail_User_ID__c</fullName>
    <description>Lookup parent Detail record and return User</description>
    <formula>User_Audit_Log_Detail__r.User__c</formula>
    <label>Detail User ID</label>
    <type>Text</type>
</CustomField>