force-app/main/default/objects/User_Audit_Log_Detail_Field__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <description>A truncated version of the full value, to be used in reports</description>
    <inlineHelpText>A truncated version of the full value, to be used in reports</inlineHelpText>
    <label>Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>