force-app/main/default/objects/User_Audit_Log_Detail_Field__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Name of the field on user.</description>
    <inlineHelpText>Name of the field on user.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>