force-app/main/default/objects/User_Audit_Log_Detail_Field__c/fields/User_Audit_Log_Detail__c.field-meta.xml
<CustomField>
    <fullName>User_Audit_Log_Detail__c</fullName>
    <description>Which User Audit Log Detail record is this for?</description>
    <inlineHelpText>Which User Audit Log Detail record is this for?</inlineHelpText>
    <label>User Audit Log Detail</label>
    <referenceTo>User_Audit_Log_Detail__c</referenceTo>
    <relationshipLabel>User Audit Log Detail Fields</relationshipLabel>
    <relationshipName>User_Audit_Log_Detail_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>