force-app/main/default/objects/User_Audit_Log_Detail_Field__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>What was the value of this field at the time of the audit.</description>
    <inlineHelpText>What was the value of this field at the time of the audit.</inlineHelpText>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>